<resources>
    <string name="app_name">Cars</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such article name</string>
    <string name="recipe_title_preview">this is the article name</string>
    <string name="article">Cars</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_articles">Cars</string>
</resources>
